GC/log/build_2021-11-04_22-41-58/controller/stderr.log
  File "/home/amd/Downloads/GC/install/controller/lib/python3.8/site-packages/controller/receiver.py", line 71
    while rclpy.ok()::
                     ^
SyntaxError: invalid syntax

